# meetpi

./: .gitignore  README.md  config.ini  pyproject.toml
.github/workflows/: ci.yml  main.yml
meetpi/: meetpi.py
tests/: test_meetpi.py
